feat: v0.6.1 游戏启动修复 — 文件完整性校验 — 多源下载 — 进程独立
- 游戏启动：spawnProcess 状态切换修复（1.5秒检测后立即切换运行中）

- 游戏启动：detached:true 进程独立运行，关闭启动器不影响游戏

- 游戏启动：JVM 参数去重、GC 兼容性（G1GC）、类路径去重

- 文件校验：库文件/资源文件大小校验，检测 0 字节损坏文件

- 下载系统：HTTP 301/302/303/307/308 重定向跟随

- 下载系统：资源文件主源改为官方 Minecraft 资源服务器，BMCLAPI 备用

- 下载系统：parallelDownload 支持 fallbackUrl 备用源

- UI/UX：PxModal 自定义弹窗替代原生 confirm()

- 文档：更新 README/CHANGELOG/NOTICE/开发指南，新增版本发布说明